[package]
name = "tokio-transport"
version = "0.1.0"
edition = "2021"


[features]
default = ["serded-json", "serded-bincode", "tracing", "rw-pipe"]

full = ["serded-json", "serded-bincode", "tracing", "rw-pipe"]

rw-pipe = ["tokio/process", "tokio/io-std", "tokio/io-util", "tokio/time"]
serded-json = ["serde_json"]
serded-bincode = ["bincode"]

[dependencies]
tokio = { version = "1", default-features = false, features = [] }
futures-core = "0.3"
futures-sink = "0.3"
bytes = "1.4"
pin-project = "1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
serde = "1"
bincode = { version = "1.3", optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1", default-features = false, features = [
    "std",
], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3"
